# speak

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  claude.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements-mqtt.txt  requirements.txt  setup.sh
docs/: DOCKER_SETUP.md  GPU_SETUP.md  JETSON_SETUP.md  MQTT_INTEGRATION.md
examples/: hello-world.txt  mqtt_listener.py
src/: __init__.py  speak-mqtt.py  speak.py
